Refactor TranslationVisitor and XQueryTranslationVisitor: remove libraryModuleNamespace and update PrologBuilder initialization. Simplify importModule and importSchema methods. Enhance DecimalFormatTranslation and PrologBuilder to accept Name objects and streamline property handling.